@@ -1187,6 +1187,24 @@ static VALUE onum_to_d_real(OCINumber *num, OCIError *errhp)
 
 /*
  *  call-seq:
+ *     onum.has_decimal_part? -> true or false
+ *
+ *  Returns +true+ if <i>self</i> has a decimal part.
+ *
+ *    OraNumber(10).has_decimal_part?   # => false
+ *    OraNumber(10.1).has_decimal_part? # => true
+ */
+static VALUE onum_has_decimal_part_p(VALUE self)
+{
+    OCIError *errhp = oci8_errhp;
+    boolean result;
+
+    oci_lc(OCINumberIsInt(errhp, _NUMBER(self), &result));
+    return result ? Qfalse : Qtrue;
+}
+
+/*
+ *  call-seq:
  *     onum.to_onum -> oranumber
  *
  *  Returns self.
@@ -1507,6 +1525,7 @@ Init_oci_number(VALUE cOCI8, OCIError *errhp)
     rb_define_method(cOCINumber, "to_f", onum_to_f, 0);
     rb_define_method(cOCINumber, "to_r", onum_to_r, 0);
     rb_define_method(cOCINumber, "to_d", onum_to_d, 0);
+    rb_define_method(cOCINumber, "has_decimal_part?", onum_has_decimal_part_p, 0);
     rb_define_method_nodoc(cOCINumber, "to_onum", onum_to_onum, 0);
 
     rb_define_method(cOCINumber, "zero?", onum_zero_p, 0);
